--- a/sytle.css
+++ b/sytle.css
@@ -4,7 +4,7 @@
     
 }
 .header{
-    background-image:linear-gradient(rgba(70, 204, 153, 0.411), rgba(19, 19, 204, 0.445)), url(./shashikant.jpg);
+    background-image:linear-gradient(rgba(70, 204, 153, 0.411), rgba(19, 19, 204, 0.445)), url(../media/shashikant.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
